OpDebug::report() incorrectly reports "errName" attribute as number and not ErrorCodes::errorString()

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.7.0
    • Affects Version/s: None
    • Component/s: Logging
    • None
    • Fully Compatible
    • ALL
    • Service arch 2020-06-15
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      https://github.com/mongodb/mongo/blob/3f13c7c6d1196192cbd23db84ef88eb8cb63aa5c/src/mongo/db/curop.cpp#L971

      4.2.6 behavior
      Unable to find source-code formatter for language: text. Available languages are: actionscript, ada, applescript, bash, c, c#, c++, cpp, css, erlang, go, groovy, haskell, html, java, javascript, js, json, lua, none, nyan, objc, perl, php, python, r, rainbow, ruby, scala, sh, sql, swift, visualbasic, xml, yaml
      2020-05-29T12:56:28.918-0400 I  COMMAND  [conn1] command test.mycoll appName: "MongoDB Shell" command: find { find: "mycoll", filter: { $where: "sleep(100)" }, maxTimeMS: 1.0, lsid: { id: UUID("802f1d9e-b425-4c4d-9c0d-a5e4ed1c9494") }, $db: "test" } numYields:0 ok:0 errMsg:"operation exceeded time limit" errName:MaxTimeMSExpired errCode:50 reslen:121 locks:{ ReplicationStateTransition: { acquireCount: { w: 2 } }, Global: { acquireCount: { r: 1 } }, Database: { acquireCount: { r: 1 } }, Collection: { acquireCount: { r: 1 } }, Mutex: { acquireCount: { r: 1 } } } protocol:op_msg 23ms
      
      master@3f13c7c behavior
      Unable to find source-code formatter for language: text. Available languages are: actionscript, ada, applescript, bash, c, c#, c++, cpp, css, erlang, go, groovy, haskell, html, java, javascript, js, json, lua, none, nyan, objc, perl, php, python, r, rainbow, ruby, scala, sh, sql, swift, visualbasic, xml, yaml
      {"t":{"$date":"2020-05-29T12:59:37.419-04:00"},"s":"I",  "c":"COMMAND",  "id":51803,   "ctx":"conn1","msg":"Slow query","attr":{"type":"command","ns":"test.mycoll","appName":"MongoDB Shell","command":{"find":"mycoll","filter":{"$where":"sleep(100)"},"maxTimeMS":1.0,"lsid":{"id":{"$uuid":"cf6e4a65-c87b-48b4-8c02-b70eafd97c4e"}},"$db":"test"},"numYields":0,"ok":0,"errMsg":"operation exceeded time limit","errName":50,"errCode":50,"reslen":121,"locks":{"ReplicationStateTransition":{"acquireCount":{"w":2}},"Global":{"acquireCount":{"r":1}},"Database":{"acquireCount":{"r":1}},"Collection":{"acquireCount":{"r":1}},"Mutex":{"acquireCount":{"r":1}}},"protocol":"op_msg","durationMillis":48}}
      

            Assignee:
            Gabriel Russell (Inactive)
            Reporter:
            Max Hirschhorn
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: