SERVER-48495 fix up the errName filed of the slow query log